Add scalable realtime post engagement
